--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -31,4 +31,6 @@ $media-expressions: (
 @import 'base/typography';
 @import 'base/forms';
 
-@import 'icon/_icons';
+@import 'layout/header';
+@import 'layout/global';
+@import 'layout/footer';
